--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "all": "^0.0.0",
     "axios": "^1.7.9",
+    "sass": "^1.83.0",
     "swiper": "^11.1.15"
   },
   "config": {
