--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "dependencies": {
     "all": "^0.0.0",
     "axios": "^1.7.9",
+    "dashjs": "^4.7.4",
+    "flv.js": "^1.6.2",
     "sass": "^1.83.0",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "video.js": "^8.21.0",
+    "videojs-contrib-dash": "^5.1.1",
+    "videojs-flvjs": "^0.3.1"
   },
   "config": {
     "commitizen": {
